test/errors/struct_bad_field.luv
# RET: 1
# ERR: {self}:9:7:    s.q = 123
# ERR: {ssss}           ^ error: 'q' is not a field of type Stuff.
struct Stuff:
    int x

def int main():
    Stuff s
    s.q = 123
    return 0
